# src/main/java/com/openapi/demo/web/rest/PeopleResource.java
@@ -4,25 +4,23 @@ import com.openapi.demo.domain.People;
 import com.openapi.demo.domain.QPeople;
 import com.openapi.demo.repository.PeopleRepository;
 import com.openapi.demo.web.api.PeopleApiDelegate;
-import com.openapi.demo.web.api.model.Ypeople;
-
-import com.querydsl.jpa.impl.JPAQuery;
+import com.openapi.demo.web.api.model.PeopleListDto;
+import com.openapi.demo.web.api.model.PeopleVM;
+import com.querydsl.core.BooleanBuilder;
 import com.querydsl.jpa.impl.JPAQueryFactory;
-import io.github.jhipster.web.util.PaginationUtil;
 import io.swagger.annotations.Api;
+import io.undertow.predicate.PredicateBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -33,20 +31,20 @@ import java.util.stream.Collectors;
 @RestController
 @RequestMapping("/api")
 @Transactional
-@Api(tags = "openApi测试用")
+@Api(tags = "123")
 public class PeopleResource implements PeopleApiDelegate {
 
     private final Logger log = LoggerFactory.getLogger(PeopleResource.class);
 
     private final QPeople qPeople = QPeople.people;
 
-    private final JPAQueryFactory queryFactory;
     private final NativeWebRequest request;
+    private final JPAQueryFactory queryFactory;
     private final PeopleRepository peopleRepository;
 
-    public PeopleResource(JPAQueryFactory queryFactory, NativeWebRequest request, PeopleRepository peopleRepository) {
-        this.queryFactory = queryFactory;
+    public PeopleResource(NativeWebRequest request, JPAQueryFactory queryFactory, PeopleRepository peopleRepository) {
         this.request = request;
+        this.queryFactory = queryFactory;
         this.peopleRepository = peopleRepository;
     }
 
@@ -56,74 +54,41 @@ public class PeopleResource implements PeopleApiDelegate {
     }
 
     @Override
-    public ResponseEntity<Object> peopleGet(Long page, Long size, List<String> sort) {
-        JPAQuery<People> query = queryFactory.selectFrom(qPeople)
-            .where(qPeople.id.isNotNull())
-            .limit(size)
-            .offset(page);
-        List<Ypeople> list = query.fetch().stream().map(people -> {
-            Ypeople newPeople = new Ypeople();
-            newPeople.setEmail(people.getEmail());
-            newPeople.setPassowrd(people.getPassword());
-            newPeople.setPhone(people.getPhone());
-            newPeople.setUsername(people.getUsername());
-            return newPeople;
-        }).collect(Collectors.toList());
-        Page<Ypeople> yPage = new PageImpl<>(list, new Pageable() {
-            @Override
-            public int getPageNumber() {
-                return 0;
-            }
+    public ResponseEntity<Void> addPeople(PeopleVM peopleVM) {
+        People people = new People();
+        people.setUsername(peopleVM.getUsername());
+        people.setPassword(peopleVM.getPassword());
+        people.setSex(peopleVM.getSex().toString());
+        people.setPhone(peopleVM.getPhone());
+        people.setHobby(peopleVM.getHobby().toString());
+        people.setDate(peopleVM.getDate());
+        people.setEmail(peopleVM.getEmail());
+        peopleRepository.save(people);
 
-            @Override
-            public int getPageSize() {
-                return Integer.parseInt(String.valueOf(size));
-            }
-
-            @Override
-            public long getOffset() {
-                return page;
-            }
-
-            @Override
-            public Sort getSort() {
-                return null;
-            }
-
-            @Override
-            public Pageable next() {
-                return null;
-            }
-
-            @Override
-            public Pageable previousOrFirst() {
-                return null;
-            }
-
-            @Override
-            public Pageable first() {
-                return null;
-            }
-
-            @Override
-            public boolean hasPrevious() {
-                return false;
-            }
-        }, query.fetchCount());
-        HttpHeaders headers = PaginationUtil.generatePaginationHttpHeaders(ServletUriComponentsBuilder.fromCurrentRequest(), yPage);
-
-        return ResponseEntity.ok().headers(headers).body(yPage);
+        return ResponseEntity.ok().build();
     }
 
     @Override
-    public ResponseEntity<Ypeople> peoplePost(Ypeople ypeople, Long page, Long size, List<String> sort) {
-        People people = new People();
-        people.setEmail(ypeople.getEmail());
-        people.setPhone(ypeople.getPhone());
-        people.setUsername(ypeople.getUsername());
-        people.setPassword(ypeople.getPassowrd());
-        peopleRepository.save(people);
+    public ResponseEntity<PeopleListDto> getPeople(Pageable pageable) {
+        PeopleListDto peopleListDto = new PeopleListDto();
+        peopleListDto.setPageNum(pageable.getPageNumber());
+        peopleListDto.setPageSize(pageable.getPageSize());
+        List<PeopleVM> list = queryFactory.selectFrom(qPeople)
+            .limit(pageable.getPageSize())
+            .offset(pageable.getOffset())
+            .fetch().stream().map(people -> {
+                PeopleVM peopleVM = new PeopleVM();
+                peopleVM.setUsername(people.getUsername());
+                peopleVM.setPassword(people.getPassword());
+                peopleVM.setSex(PeopleVM.SexEnum.fromValue(people.getSex()));
+                peopleVM.setHobby(Arrays.asList(people.getHobby().split(",").clone()));
+                peopleVM.setDate(people.getDate());
+                peopleVM.setEmail(people.getEmail());
+                peopleVM.setPhone(people.getPhone());
+                return peopleVM;
+            }).collect(Collectors.toList());
+        peopleListDto.setPeopleList(list);
 
-        return ResponseEntity.ok(ypeople);
+        return ResponseEntity.ok(peopleListDto);
     }
 }
